2010-04-24  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: Set figure color property to 'none' when printing.

2010-04-24  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Correct fill of diamond markers

2010-04-24  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Consistent placement of axes for ps vs
	other gnuplot terminals.

2010-04-23  Ben Abbott <bpabbott@mac.com>

	* plot/colorbar.m: Fix colorbar() bugs for manual plotboxaspectratio.
	* plot/axis.m: For 'axis normal' restore plotboxaspectratio.

2010-04-23  John W. Eaton  <jwe@octave.org>

	* gethelp.cc (extract_help_text): Use C++ static_cast instead of
	C-style cast.

2010-04-23  Rik <octave@nomad.inbox5.com>

	* audio/loadaudio.m, audio/mu2lin.m, audio/playaudio.m,
	audio/saveaudio.m, audio/wavread.m, audio/wavwrite.m,
	deprecated/cellidx.m, deprecated/intwarning.m,
	deprecated/lchol.m, deprecated/spatan2.m, deprecated/spchol.m,
	deprecated/spchol2inv.m, deprecated/spcholinv.m,
	deprecated/spcumprod.m, deprecated/spcumsum.m,
	deprecated/spdet.m, deprecated/spdiag.m, deprecated/spfind.m,
	deprecated/spinv.m, deprecated/spkron.m, deprecated/splchol.m,
	deprecated/split.m, deprecated/splu.m, deprecated/spmax.m,
	deprecated/spmin.m, deprecated/spprod.m, deprecated/spqr.m,
	deprecated/spsum.m, deprecated/spsumsq.m, elfun/lcm.m,
	general/bicubic.m, general/cell2mat.m, general/circshift.m,
	general/cplxpair.m, general/cumtrapz.m, general/dblquad.m,
	general/del2.m, general/gradient.m, general/idivide.m,
	general/int2str.m, general/interp1.m, general/interp2.m,
	general/interp3.m, general/interpn.m, general/isa.m,
	general/num2str.m, general/postpad.m, general/prepad.m,
	general/private/__isequal__.m, general/quadgk.m,
	general/quadl.m, general/quadv.m, general/rat.m,
	general/rotdim.m, general/shift.m, general/sortrows.m,
	general/structfun.m, general/trapz.m, geometry/griddata.m,
	geometry/griddata3.m, geometry/inpolygon.m, geometry/rectint.m,